Subida de datos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="detalles.css">
 </head>
 <body>
-   <h1>Hola mundo aqui haciendo fol</h1> 
+    <div class="principal">
+        <h1>Características del convenio colectivo de informática</h1>
+        <fieldset>
+            <p>En esta página se desglozarán algunps datos importantes del convenio colectivo de informática, porfavor sleccione uno para acceder a la información</p>
+        </fieldset>
+       <div class="Punto1"><p>Grupos profesionales y categorías a los que puedes acceder.</p></div> 
+       <div class="Punto2"><p>Nº horas máximas semanales de trabajo: </p></div>
+       <div class="Punto3"><p>Cuantía de Horas extras. </p></div>
+       <div class="Punto4"><p>Cuantía de Nocturnidad. </p></div>
+       <div class="Punto5"><p>Contratos a los que podéis optar, ¿cuándo se haría indefinido según el convenio? </p></div>
+       <div class="Punto6"><p>Periodo de prueba. </p></div>
+       <div class="Punto7"><p>Permisos retribuidos / no retribuidos. </p></div>
+       <div class="Punto8"><p>Incapacidad temporal, conciliación de la vida familiar y laboral (maternidad/ paternidad / Lactancia), jubilación. </p></div>
+       <div class="Punto9"><p>Aumentos de sueldo </p></div>
+       <div class="Punto10"><p>Enfermedades profesionales </p></div>
+       <div class="Punto11"><p>Tabla salarial </p></div>
+    </div>
 </body>
 </html>
